--- a/404-page.html
+++ b/404-page.html
@@ -126,14 +126,13 @@
       </div>
     </div>
 
-    <!-- Footer Section -->
+     <!-- Footer Section -->
 
-    <div class="container-fluid">
+     <div class="container-fluid">
       <img
         src="assets/site-images/Line.webp"
-        alt=""
-        height="2px"
-        width="100%"
+        alt="rainbow line"
+        style="width: 100%; height: 2px"
       />
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
@@ -186,7 +185,7 @@
               aria-hidden="true"
             ></i
           ></a>
-          <a href="mailto: hello@designled.io" aria-label="email"
+          <a href="mailto:hello@designled.io" aria-label="email"
             ><i
               class="social-icons fa-solid fa-envelope fa-2x"
               aria-hidden="true"
