--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -84,11 +84,14 @@
 
 
 
-    
   <!-- Footer Section -->
 
   <div class="container-fluid">
-    <img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
+    <img
+      src="assets/site-images/Line.webp"
+      alt="rainbow line"
+      style="width: 100%; height: 2px"
+    />
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
     >
@@ -98,16 +101,18 @@
           class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
         >
           <svg class="bi" width="30" height="24">
-            <use xlink:href="#bootstrap" aria-label="DesignLed copyright"></use>
+            <use
+              xlink:href="#bootstrap"
+              aria-label="DesignLed copyright"
+            ></use>
           </svg>
-
         </a>
         <span class="mb-3 mb-md-0 text-body-secondary"
           >© 2023 DesignLed Ltd</span
         >
       </div>
 
-      <div class="social-group nav col-md-2 justify-content-between">
+      <div class="nav col-md-2 justify-content-between">
         <a
           href="https://www.pinterest.ie/"
           target="_blank"
@@ -138,8 +143,7 @@
             aria-hidden="true"
           ></i
         ></a>
-        <a href="mailto: hello@designled.io"
-        aria-label="email"
+        <a href="mailto:hello@designled.io" aria-label="email"
           ><i
             class="social-icons fa-solid fa-envelope fa-2x"
             aria-hidden="true"
