Fix html issues on Colour Theory page following HTMl checker

--- a/colour-theory.html
+++ b/colour-theory.html
@@ -98,7 +98,7 @@
         different colours to enable you to experience different feelings as you
         walk into a room. Once you start to understand the power of colour in
         your home, you can start to use it intentionally to allow you to
-        influence how you feel in different parts of your home. <br /><br />
+        influence how you feel in different parts of your home. <br><br>
         Have you ever walked into a sunny cafe with bright yellow walls and
         instantly felt livelier? Or entered the calm, of a spa decorated in
         soft, natural tones and felt an unmistakeable feeling of zen? The colour
@@ -112,7 +112,7 @@
     </div>
 
     <div class="colour-theory-line">
-      <img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
+      <img src="assets/site-images/Line.webp" alt="rainbow line" style="height: 2px; width: 100%;">
     </div>
 
     <!-- Colour sections -->
