Fix html issues on contact page and contact form submit page following html checker

--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -96,7 +96,7 @@
         will be automatically redirected to our home page in a moment.
       </h3>
 
-      <meta http-equiv = "refresh" content = "10; url = https://designleddublin.github.io/ColourTheory/" />
+      <meta http-equiv="refresh"; content="10; url=https://designleddublin.github.io/ColourTheory/">
     </div>
 
     <!-- Footer Section -->
