Move redirect code to header in contact form submit page following html checker

--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -23,6 +23,7 @@
       rel="stylesheet"
     >
     <link rel="stylesheet" href="assets/CSS/styles.css">
+    <meta http-equiv="refresh" content="10; url=https://designleddublin.github.io/ColourTheory/">
 
     <title>Colour Theory</title>
     <link rel="icon" type="image/x-icon" href="assets/site-images/favicon.ico">
@@ -95,8 +96,6 @@
         Thanks for your message! We will be in touch before you know it. You
         will be automatically redirected to our home page in a moment.
       </h3>
-
-      <meta http-equiv="refresh"; content="10; url=https://designleddublin.github.io/ColourTheory/">
     </div>
 
     <!-- Footer Section -->
