Change button background colour site wide

--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@
           <span class="text-danger">Oooops!</span> We seem to have got you lost.
         </p>
         <p class="lead">The page you’re looking for doesn’t exist.</p>
-        <a href="index.html" class="btn btn-primary">Go Home</a>
+        <a href="index.html" class="btn btn-primary">Go back to our Home Page</a>
       </div>
     </div>
 
