--- a/404.html
+++ b/404.html
@@ -87,8 +87,8 @@
     <div class="d-flex align-items-center justify-content-center">
       <div class="text-center">
         <h1 class="display-1 fw-bold">404</h1>
-        <p class="fs-3">
-          <span class="text-danger">Oooops!</span> We seem to have got you lost.
+        <p class="fs-3 lead">
+          Oooops! We seem to have got you lost.
         </p>
         <p class="lead">The page you’re looking for doesn’t exist.</p>
         <a href="index.html" class="btn btn-primary">Go back to our Home Page</a>
