Reduce image sizes after lighthouse report

--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -40,7 +40,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" style="width:125px;">
+        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" style="width:125px; height: 125px;">
       </a>
       <div class="w-100 text-right">
         <button
