Fix content alignment in Coming Soon section of home page

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             your dream spaces.
           </p>
         </div>
-        <div class="col-xs-12 col-sm-4 col-no-padding">
+        <div class="col-xs-12 col-sm-4 col-no-padding center">
           <i class="fa-solid fa-house fa-6x" style="color: #ffffff"></i>
         </div>
       </div>
