Fix brand sizing syntax in navbar and update readme

--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -23,7 +23,6 @@
       rel="stylesheet"
     >
     <link rel="stylesheet" href="assets/CSS/styles.css">
-    <meta http-equiv="refresh" content="10; url=https://designleddublin.github.io/ColourTheory/">
 
     <title>Colour Theory</title>
     <link rel="icon" type="image/x-icon" href="assets/site-images/favicon.ico">
@@ -40,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" style="width:125px; height: 125px;">
+        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" style="width:125px;">
       </a>
       <div class="w-100 text-right">
         <button
