--- a/Maximalist.html
+++ b/Maximalist.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" style="width:125px;">
+        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" width="125" height="125">
       </a>
       <div class="w-100 text-right">
         <button
