--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -114,7 +114,7 @@
 
       <div class="nav col-md-2 justify-content-between">
         <a
-          href="https://www.pinterest.ie/"
+          href="https://www.pinterest.ie/designledstudio"
           target="_blank"
           rel="noopener noreferral"
           aria-label="Pinterest"
@@ -124,7 +124,7 @@
           ></i
         ></a>
         <a
-          href="https://www.facebook.com/"
+          href="https://www.facebook.com/designled"
           target="_blank"
           rel="noopener noreferral"
           aria-label="Facebook"
@@ -134,7 +134,7 @@
           ></i
         ></a>
         <a
-          href="https://www.instagram.com/"
+          href="https://www.instagram.com/designledstudio/"
           target="_blank"
           rel="noopener noreferral"
           aria-label="Instagram"
