--- a/Maximalist.html
+++ b/Maximalist.html
@@ -118,9 +118,9 @@ How to create a maximalist colour scheme:  </h3>
 
   </div>
 
-  <!-- Footer Section -->
+   <!-- Footer Section -->
 
-  <div class="container-fluid">
+   <div class="container-fluid">
     <img
       src="assets/site-images/Line.webp"
       alt="rainbow line"
@@ -148,7 +148,7 @@ How to create a maximalist colour scheme:  </h3>
 
       <div class="nav col-md-2 justify-content-between">
         <a
-          href="https://www.pinterest.ie/"
+          href="https://www.pinterest.ie/designledstudio"
           target="_blank"
           rel="noopener noreferral"
           aria-label="Pinterest"
@@ -158,7 +158,7 @@ How to create a maximalist colour scheme:  </h3>
           ></i
         ></a>
         <a
-          href="https://www.facebook.com/"
+          href="https://www.facebook.com/designled"
           target="_blank"
           rel="noopener noreferral"
           aria-label="Facebook"
@@ -168,7 +168,7 @@ How to create a maximalist colour scheme:  </h3>
           ></i
         ></a>
         <a
-          href="https://www.instagram.com/"
+          href="https://www.instagram.com/designledstudio/"
           target="_blank"
           rel="noopener noreferral"
           aria-label="Instagram"
