Add bootstrap credit notes in code on all pages

--- a/404.html
+++ b/404.html
@@ -32,6 +32,8 @@
 
   <body>
     
+      <!-- Navbar base code from Bootstrap -->
+
   <!-- Nav bar section-->
 <div class=" container-fluid navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
@@ -87,7 +89,7 @@
 
     <div class="d-flex align-items-center justify-content-center">
       <div class="text-center">
-        <h1 class="display-1 fw-bold">404</h1>
+        <h1 class="display-1 fw-bold fourzerofour">404</h1>
         <p class="fs-3 lead">
           Oooops! We seem to have got you lost.
         </p>
@@ -104,6 +106,8 @@
       alt="rainbow line"
       style="width: 100%; height: 2px"
     >
+    <!-- Footer base code from Bootstrap -->
+
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
     >
