--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -30,6 +30,7 @@
   </head>
 
   <body>
+    <!-- Navbar base code from Bootstrap -->
     
   <!-- Nav bar section-->
 <div class=" container-fluid navbar-fixed-top">
@@ -92,6 +93,8 @@
       alt="rainbow line"
       style="width: 100%; height: 2px"
     >
+
+     <!-- Footer base code from Bootstrap -->
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
     >
