--- a/colour-theory.html
+++ b/colour-theory.html
@@ -30,7 +30,8 @@
   </head>
 
   <body>
-    
+    <!-- Navbar base code from Bootstrap -->
+
   <!-- Nav bar section-->
 <div class=" container-fluid navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
@@ -115,7 +116,7 @@
     </div>
 
     <!-- Colour sections -->
-
+<!-- Bootstrap base code  -->
     <div class="container-fluid">
       <div class="colours row row-no-margin">
         <div class="col-xs-12 col-sm-6">
@@ -280,6 +281,7 @@
       alt="rainbow line"
       style="width: 100%; height: 2px"
     >
+     <!-- Footer base code from Bootstrap -->
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
     >
