--- a/Maximalist.html
+++ b/Maximalist.html
@@ -30,7 +30,8 @@
   </head>
 
   <body>
-    
+    <!-- Navbar base code from Bootstrap -->
+
   <!-- Nav bar section-->
 <div class=" container-fluid navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
@@ -95,7 +96,7 @@
        This is the colour scheme for the people who like to be bold with their homes.  It's about putting bold colours up against each other, even clashing. 
       </p>
     </div>
-
+<!-- Bootstrap base code  -->
     <div class="hero-images row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/maximalist_room.webp" alt="maximalist room">
@@ -126,6 +127,7 @@ How to create a maximalist colour scheme:  </h3>
       alt="rainbow line"
       style="width: 100%; height: 2px"
     >
+     <!-- Footer base code from Bootstrap -->
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
     >
