--- a/Monochromatic.html
+++ b/Monochromatic.html
@@ -30,7 +30,8 @@
   </head>
 
   <body>
-    
+    <!-- Navbar base code from Bootstrap -->
+
   <!-- Nav bar section-->
 <div class=" container-fluid navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
@@ -100,6 +101,7 @@
         very naturally into the next.
       </p>
     </div>
+    <!-- Bootstrap base code  -->
     <div class="hero-images row row-no-margin">
       <div class="col-xs-12 col-sm-6">
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/monochromatic_room.webp" alt="monochromatic room">
@@ -130,6 +132,7 @@ How to create a monochromatic colour scheme:  </h3>
       alt="rainbow line"
       style="width: 100%; height: 2px"
     >
+     <!-- Footer base code from Bootstrap -->
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
     >
