--- a/Neutral.html
+++ b/Neutral.html
@@ -30,7 +30,8 @@
   </head>
 
   <body>
-    
+    <!-- Navbar base code from Bootstrap -->
+
   <!-- Nav bar section-->
 <div class=" container-fluid navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
@@ -97,6 +98,7 @@
       </p>
     </div>
 
+    <!-- Bootstrap base code  -->
     <div class="hero-images row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_room.webp" alt="Neutral Room">
@@ -130,6 +132,7 @@ How to create a neutral colour scheme:  </h3>
       alt="rainbow line"
       style="width: 100%; height: 2px"
     >
+     <!-- Footer base code from Bootstrap -->
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
     >
