--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,8 @@
   </head>
 
   <body>
-    
+    <!-- Navbar base code from Bootstrap -->
+
   <!-- Nav bar section-->
 <div class=" container-fluid navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
@@ -81,8 +82,6 @@
     </div>
   </nav>
 </div>
-
-
 
     <section class="mb-4">
       <!-- Header Text -->
@@ -190,6 +189,7 @@
       alt="rainbow line"
       style="width: 100%; height: 2px"
     >
+     <!-- Footer base code from Bootstrap -->
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
     >
