--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </head>
 
   <body>
+    <!-- Navbar base code from Bootstrap -->
     
   <!-- Nav bar section-->
 <div class=" container-fluid navbar-fixed-top">
@@ -89,7 +90,7 @@
     </div>
 
     <!-- CAROUSEL SECTION  -->
-
+<!-- Bootstrap base code  -->
     <div
       id="carouselExampleControls"
       class="carousel slide"
@@ -147,7 +148,7 @@
     </div>
 
     <!-- COMING SOON SECTION -->
-
+<!-- Bootstrap base code  -->
     <div class="container-fluid coming-soon">
       <div class="row row-no-margin">
         <div class="col-xs-12 col-sm-4 col-no-padding">
@@ -175,6 +176,7 @@
       alt="rainbow line"
       style="width: 100%; height: 2px"
     >
+     <!-- Footer base code from Bootstrap -->
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
     >
