Fix accessibility issues on home page following wave assessment

--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -24,6 +24,8 @@
     >
     <link rel="stylesheet" href="assets/CSS/styles.css">
 
+    <meta http-equiv="refresh" content="10; url=https://designleddublin.github.io/ColourTheory/">
+
     <title>Colour Theory</title>
     <link rel="icon" type="image/x-icon" href="assets/site-images/favicon.ico">
 
