--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <div class="container-fluid coming-soon">
       <div class="row row-no-margin">
         <div class="col-xs-12 col-sm-4 col-no-padding">
-          <i class="fa-solid fa-house fa-6x" style="color: #ffffff"></i>
+          <i class="fa-solid fa-house fa-6x" style="color: #ffffff" aria-label="house icon"></i>
         </div>
         <div class="col-xs-12 col-sm-4 col-no-padding">
           <h3>COMING SOON</h3>
